--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
+    "@types/node": "^14.14.6",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "eslint": "^7.12.0",
@@ -20,5 +21,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.2",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "fs": "0.0.1-security"
   }
 }
