--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "sourceMap": true,
     "module": "commonjs",
     "noImplicitAny": true,
+    "strictNullChecks": true
   },
   "include": ["./src/**/*"]
 }
