--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": false,
   "devDependencies": {
     "@types/node": "^14.14.6",
+    "@types/stringify-object": "^3.3.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "eslint": "^7.12.0",
@@ -21,6 +22,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.2",
+    "stringify-object": "^3.3.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
