--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "noImplicitAny": true,
     "strictNullChecks": true
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*", "./tools/**/*"]
 }
