--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "tsc",
     "start": "tsc && node ./dist/app.js",
     "lint": "eslint . --ext .ts --fix",
-    "licenses": "npm-license-crawler -dependencies -json licenses.json && tsc && node ./dist/tools/licenses.js"
+    "attribution": "license-checker --production --unknown --json --out licenses.json && tsc && node ./dist/tools/licenses.js",
+    "licenses": "license-checker --production --unknown --summary"
   },
   "author": "Nathan Fast",
   "license": "MIT",
@@ -23,10 +24,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.2",
-    "stringify-object": "^3.3.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "stringify-object": "^3.3.0"
   }
 }
