--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start": "tsc && node ./dist/app.js",
-    "lint": "eslint . --ext .ts --fix",
-    "licenses-attribution": "license-checker --production --unknown",
-    "licenses-summary": "license-checker --production --unknown --summary"
+    "lint": "eslint . --ext .ts --fix"
   },
   "author": "Nathan Fast",
   "license": "MIT",
@@ -27,7 +25,6 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "fs": "0.0.1-security",
-    "stringify-object": "^3.3.0"
+    "fs": "0.0.1-security"
   }
 }
