--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "minimist": "^1.2.5"
   }
 }
