--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@types/minimist": "^1.2.1",
     "@types/node": "^14.14.6",
     "@types/stringify-object": "^3.3.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
