--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "markdown-file-guide-generator",
+  "name": "mdfg",
   "version": "0.0.1",
   "description": "Generates markdown for a \"File Guide\", which is a two-column table with a file structure (made using unicode box-drawing characters) in the first column, and descriptions of what each file is in the second column.",
   "scripts": {
     "lint": "eslint . --ext .ts --fix",
     "build": "tsc",
     "start": "tsc && node ./dist/app.js node_modules dist .git",
-    "package": "tsc && pkg package.json --out-path=./dist/"
+    "package": "tsc && pkg package.json --target=win --out-path=./dist/win/ && pkg package.json --target=macos --out-path=./dist/macos/ && pkg package.json --target=linux --out-path=./dist/linux/"
   },
   "bin":"./dist/app.js",
   "author": "Nathan Fast",
